# csc299-project

./: GeminiConversation.md  README.md  SUMMARY.md  notes.json  specs.md  task_manager_cli.py  video.txt
finalversion/: .gitignore  README.md  SPEC.md  debug_add_note.py  debug_add_note_flow.py  documentation.md  notes.json  pyproject.toml  setup.sh  specifications.md  tasks.json  tests.md
finalversion/src/finalversion/: __init__.py  ai_agent.py  chat.py  cli.py  improved_task_manager.py  notes.json  pkms.py  tasks.json  tasks_adapter.py  tasks_new.json
finalversion/tasks3/src/tasks3/: __init__.py  improved_task_manager.py
finalversion/tasks3/tasks2/: README.md  improved_task_manager_cli.py
finalversion/tasks3/tests/: test_inc.py
finalversion/tests/: test_ai_agent.py  test_chat.py  test_cli.py  test_pkms.py  test_pkms_isolated.py  test_task_notifications.py  test_task_prioritization.py  test_tasks_adapter.py
tasks1/: README.md  task_manager.py
tasks2/: PLAN.md
tasks3/: pyproject.toml
tasks3/src/tasks3/: improved_task_manager.py  tasks_new.json
tasks3/tasks2/: improved_task_manager.py
tasks4/: README.md  pyproject.toml
tasks4/list/: pyvenv.cfg
tasks4/src/tasks4/: __init__.py  main.py
tasks5/: README.md  pyproject.toml  requirements.txt
tasks5/specify/memory/: constitution.md
tasks5/task_manager/: README.md  __init__.py  cli.py  store.py  test_store.py
