[project]
name = "tasks3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RyanPham", email = "Rpham@depaul.edu" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tasks3 = "tasks3:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
