[project]
name = "tasks4"
version = "0.1.0"
description = "Experiment for OpenAI Chat Completions API"
readme = "README.md"
authors = [
    { name = "RyanPham", email = "Rpham@depaul.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "openai",
]

[project.scripts]
tasks4 = "tasks4.main:main" 

[tool.uv.scripts]
tasks4 = "tasks4.main:main" 

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
